--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ucloud",
-    "version": "2024.1.61",
+    "version": "2024.1.64",
     "description": "UCloud",
     "type": "module",
     "author": "IMADA - eScience Center, SDU",
@@ -43,6 +43,7 @@
         "react-syntax-highlighter": "15.5.0",
         "react-transition-group": "4.4.5",
         "react-virtualized-auto-sizer": "^1.0.24",
+        "react-window": "^1.8.10",
         "redux": "4.2.1",
         "rusha": "0.8.14",
         "ua-parser-js": "1.0.38",
