--- a/provider-integration/im2/examples/config/slurm/unmanaged_config.yml
+++ b/provider-integration/im2/examples/config/slurm/unmanaged_config.yml
@@ -92,4 +92,4 @@ services:
         payment:
           type: Resource
           unit: Cpu
-          interval: Hourly
+          interval: Minutely
