--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ucloud",
-    "version": "2024.1.85",
+    "version": "2024.2.0-rc3",
     "description": "UCloud",
     "type": "module",
     "author": "IMADA - eScience Center, SDU",
