--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -48,7 +48,8 @@
         "rusha": "0.8.14",
         "ua-parser-js": "1.0.39",
         "xterm": "5.3.0",
-        "xterm-addon-fit": "0.8.0"
+        "xterm-addon-fit": "0.8.0",
+        "yaml": "^2.6.0"
     },
     "devDependencies": {
         "@types/history": "5.0.0",
