--- a/frontend-web/webclient/site.config.json
+++ b/frontend-web/webclient/site.config.json
@@ -13,6 +13,5 @@
     "SUPPORT_EMAIL": "support@escience.sdu.dk",
     "SITE_DOCUMENTATION_URL": "https://docs.cloud.sdu.dk/",
     "SITE_FAQ_URL": "https://docs.cloud.sdu.dk/help/faq.html",
-    "QUICK_LAUNCH_PRODUCT": "u1-standard-1",
-    "DEFAULT_LOGIN": "wayf"
+    "QUICK_LAUNCH_PRODUCT": "u1-standard-1"
 }
