--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -18,11 +18,13 @@
     },
     "dependencies": {
         "@novnc/novnc": "1.4.0",
+        "@observablehq/plot": "0.6.16",
         "@reduxjs/toolkit": "2.3.0",
         "@rjsf/core": "4.2.3",
         "@svgr/cli": "8.1.0",
         "apexcharts": "3.54.1",
         "assert": "2.1.0",
+        "d3": "7.9.0",
         "date-fns": "4.1.0",
         "deepcopy": "2.1.0",
         "fast-deep-equal": "3.1.3",
@@ -32,7 +34,7 @@
         "magic-bytes.js": "1.10.0",
         "monaco-editor": "0.52.0",
         "react": "18.3.1",
-        "react-apexcharts": "1.4.1",
+        "react-apexcharts": "1.4.4",
         "react-datepicker": "6.9.0",
         "react-dom": "18.3.1",
         "react-markdown": "9.0.1",
@@ -52,10 +54,11 @@
         "yaml": "^2.6.0"
     },
     "devDependencies": {
+        "@types/d3": "7.4.3",
         "@types/history": "5.0.0",
         "@types/json-schema": "7.0.15",
         "@types/jsrsasign": "10.5.14",
-        "@types/react": "18.3.11",
+        "@types/react": "18.3.12",
         "@types/react-datepicker": "6.2.0",
         "@types/react-dom": "18.3.1",
         "@types/react-modal": "3.16.3",
@@ -63,7 +66,7 @@
         "@types/react-transition-group": "4.4.11",
         "@types/react-window": "^1.8.8",
         "@types/rusha": "0.8.3",
-        "@types/styled-system": "5.1.22",
+        "@types/styled-system": "5.1.23",
         "@types/ua-parser-js": "0.7.39",
         "@vitejs/plugin-react": "4.3.3",
         "@vitejs/plugin-react-refresh": "1.3.6",
