--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -32,20 +32,20 @@
         "jsrsasign": "11.1.0",
         "localforage": "1.10.0",
         "magic-bytes.js": "1.10.0",
-        "monaco-editor": "0.52.0",
+        "monaco-editor": "0.52.2",
         "react": "18.3.1",
         "react-apexcharts": "1.4.4",
         "react-datepicker": "6.9.0",
         "react-dom": "18.3.1",
         "react-markdown": "9.0.1",
-        "react-modal": "3.16.1",
+        "react-modal": "3.16.3",
         "react-redux": "8.1.3",
         "react-router": "6.28.0",
         "react-router-dom": "6.28.0",
         "react-syntax-highlighter": "15.6.1",
         "react-transition-group": "4.4.5",
-        "react-virtualized-auto-sizer": "^1.0.24",
-        "react-window": "^1.8.10",
+        "react-virtualized-auto-sizer": "1.0.25",
+        "react-window": "1.8.11",
         "redux": "4.2.1",
         "rusha": "0.8.14",
         "ua-parser-js": "1.0.39",
@@ -58,7 +58,7 @@
         "@types/history": "5.0.0",
         "@types/json-schema": "7.0.15",
         "@types/jsrsasign": "10.5.15",
-        "@types/react": "18.3.16",
+        "@types/react": "18.3.17",
         "@types/react-datepicker": "6.2.0",
         "@types/react-dom": "18.3.5",
         "@types/react-modal": "3.16.3",
