IM2/K8s: Follow, web and VNC support

--- a/provider-integration/im2/examples/config/kubernetes/config.yml
+++ b/provider-integration/im2/examples/config/kubernetes/config.yml
@@ -36,6 +36,11 @@ provider:
 services:
   type: Kubernetes
   compute:
+    web:
+      enabled: true
+      prefix: "gok8s-"
+      suffix: ".localhost.direct"
+
     machines:
       u1-standard:
         nameSuffix: Cpu
