--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -33,6 +33,7 @@
         "localforage": "1.10.0",
         "magic-bytes.js": "1.10.0",
         "monaco-editor": "0.52.2",
+        "monaco-vim": "^0.4.2",
         "react": "18.3.1",
         "react-apexcharts": "1.4.4",
         "react-datepicker": "6.9.0",
