--- a/backend/app-store-service/examples/k8s/ubuntu2404-vm.yml
+++ b/backend/app-store-service/examples/k8s/ubuntu2404-vm.yml
@@ -1,11 +1,11 @@
 application: v2
 
 name: ubuntu-vm
-version: 24.04
+version: 24.04-2
 
 software:
   type: VirtualMachine
-  image: https://cloud-images.ubuntu.com/noble/20250214/noble-server-cloudimg-amd64.img
+  image: https://launcher-assets.cloud.sdu.dk/vm/ubuntu-24-04-cloud-amd64.img
 
 features:
   multiNode: false
