IM2/K8s: Public IPs (in containers)

--- a/provider-integration/im2/examples/config/kubernetes/config.yml
+++ b/provider-integration/im2/examples/config/kubernetes/config.yml
@@ -41,6 +41,9 @@ services:
       prefix: "gok8s-"
       suffix: ".localhost.direct"
 
+    publicIps:
+      enabled: true
+
     machines:
       u1-standard:
         nameSuffix: Cpu
