IM2/K8s: SSH and key injection
Fixes #4597
Fixes #4623

--- a/provider-integration/im2/examples/config/kubernetes/config.yml
+++ b/provider-integration/im2/examples/config/kubernetes/config.yml
@@ -44,6 +44,13 @@ services:
     publicIps:
       enabled: true
 
+    ssh:
+      enabled: true
+      ipAddress: 10.56.32.3
+      hostname: ucloud.invalid
+      portMin: 8000
+      portMax: 16000
+
     machines:
       u1-standard:
         nameSuffix: Cpu
