Added example config for public links

--- a/provider-integration/im2/examples/config/kubernetes/config.yml
+++ b/provider-integration/im2/examples/config/kubernetes/config.yml
@@ -44,6 +44,11 @@ services:
     publicIps:
       enabled: true
 
+    publicLinks:
+      enabled: true
+      prefix: "gok8s-"
+      suffix: ".localhost.direct"
+
     syncthing:
       enabled: true
       ipAddress: 10.56.32.4
