--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -55,10 +55,12 @@
     "yaml": "2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@types/d3": "7.4.3",
     "@types/history": "5.0.0",
     "@types/json-schema": "7.0.15",
     "@types/jsrsasign": "10.5.15",
+    "@types/node": "^24.2.0",
     "@types/react": "19.1.9",
     "@types/react-datepicker": "7.0.0",
     "@types/react-dom": "19.1.7",
