IM2: Check :authority header in envoy for all requests

--- a/provider-integration/im2/Dockerfile
+++ b/provider-integration/im2/Dockerfile
@@ -1,12 +1,18 @@
-FROM golang:1.24.2 AS build
-WORKDIR /app
-RUN  --mount=type=bind,target=. ls /app
-RUN  --mount=type=bind,target=. cd /app/im2 && CGO_ENABLED=0 go build -o /usr/bin/ucloud -trimpath ucloud.dk/cmd/ucloud-im
-
 FROM ubuntu:24.04
-COPY --from=build /usr/bin/ucloud /usr/bin/ucloud
 RUN apt-get update && \
-    apt-get install -y ca-certificates fontconfig fonts-dejavu-core && \
+    apt-get install -y ca-certificates && \
     update-ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
+COPY bin/ucloud_aarch64 /usr/bin/tmp_ucloud_aarch64
+COPY bin/ucloud_x86_64 /usr/bin/tmp_ucloud_x86_64
+
+COPY bin/ucmetrics_x86_64 /usr/bin/tmp_ucmetrics_x86_64
+COPY bin/ucmetrics_aarch64 /usr/bin/tmp_ucmetrics_aarch64
+
+COPY bin/ucviz_aarch64 /usr/bin/tmp_ucviz_aarch64
+COPY bin/ucviz_x86_64 /usr/bin/tmp_ucviz_x86_64
+
+RUN mv /usr/bin/tmp_ucloud_`uname -m` /usr/bin/ucloud && rm /usr/bin/tmp_ucloud*
+RUN mv /usr/bin/tmp_ucmetrics_`uname -m` /usr/bin/ucmetrics && rm /usr/bin/tmp_ucmetrics*
+RUN mv /usr/bin/tmp_ucviz_`uname -m` /usr/bin/ucviz && rm /usr/bin/tmp_ucviz*
