--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ucloud",
-    "version": "2025.4.54",
+    "version": "2025.4.69",
     "description": "UCloud",
     "type": "module",
     "author": "IMADA - eScience Center, SDU",
@@ -34,6 +34,7 @@
         "deepcopy": "2.1.0",
         "fast-deep-equal": "3.1.3",
         "fuse.js": "7.1.0",
+        "immer": "^10.1.1",
         "jsrsasign": "11.1.0",
         "localforage": "1.10.0",
         "magic-bytes.js": "1.12.1",
