--- a/frontend-web/webclient/.gitignore
+++ b/frontend-web/webclient/.gitignore
@@ -2,3 +2,12 @@
 /dist/*
 /coverage/*
 /.vscode/settings.json
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+/tests/test_data.json
