--- a/frontend-web/webclient/package.json
+++ b/frontend-web/webclient/package.json
@@ -9,6 +9,7 @@
         "start:local": "vite --mode local-dev",
         "start:compose": "vite --mode compose",
         "start:sandbox": "vite --mode sandbox",
+        "start:prod": "vite --mode prod",
         "watch": "tsc --watch --noEmit",
         "build": "node scripts/update-version-file.js && vite build",
         "serve": "vite preview",
