--- a/frontend-web/webclient/tsconfig.json
+++ b/frontend-web/webclient/tsconfig.json
@@ -20,7 +20,7 @@
         "jsx": "react",
         "pretty": true,
         "allowJs": true,
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "sourceMap": true,
         "baseUrl": ".",
